# Kokoros

./: README.md
koko/src/: main.rs
kokoros/: Cargo.toml  TEST_RESULTS.md
kokoros/examples/: debug_phonetisaurus.rs  test_backends.rs  test_byt5_new_model.rs  test_byt5_vs_espeak.rs  test_phonemizer.rs  test_piper.rs
kokoros/src/onn/: ort_base.rs  ort_koko.rs
kokoros/src/tts/: koko.rs  normalize.rs  phonemizer.rs  tokenize.rs
