[package]
name = "kokoros"
version = "0.1.0"
edition = "2024"

[dependencies]
hound = "3.5.1"
indicatif = "0.17.11"
ndarray = "0.16.1"
lazy_static = "1.5.0"
fancy-regex = "0.13"
regex = "1.11.1"
misaki-rs = { path = "../../misaki-rs" }
reqwest = { version = "0.12.19" }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["fs", "io-util"] }
ndarray-npy = "0.9.1"
mp3lame-encoder = "0.2.1"
tracing = "0.1"
uuid = { version = "1.0", features = ["v4"] }
opus = "0.3"
ogg = "0.9"

# Base ONNX Runtime configuration
# Use official ort from crates.io
ort = { version = "2.0.0-rc.10", default-features = true }

[[example]]
name = "test_phonemizer"
path = "examples/test_phonemizer.rs"

[features]
default = ["cpu"]
cpu = []
cuda = ["ort/cuda"]

[dev-dependencies]
tracing-subscriber = "0.3"
